# alpaca-sdk-cpp

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  file.txt  playground.cpp
examples/: CMakeLists.txt  get_account.cpp  list_orders.cpp  list_positions.cpp  market_clock.cpp  place_order.cpp  portfolio_history.cpp  stream_market_data.cpp  stream_trade_updates.cpp
include/alpaca/: alpaca.hpp  environment.hpp  httpClient.hpp  marketDataClient.hpp  tradingClient.hpp  utils.hpp
include/alpaca/client/: environment.hpp  httpClient.hpp  marketDataClient.hpp  marketDataStream.hpp  tradeUpdateStream.hpp  tradingClient.hpp  websocketClient.hpp
include/alpaca/models/: accounts.hpp  bars.hpp  orders.hpp  positions.hpp
include/alpaca/models/accounts/: serialize.hpp
include/alpaca/models/bars/: serialize.hpp
include/alpaca/models/marketdata/: bars.hpp  serialize.hpp
include/alpaca/models/orders/: common.hpp  ordersRequest.hpp  ordersResponse.hpp  serialize.hpp
include/alpaca/models/positions/: positions.hpp  serialize.hpp
include/alpaca/models/streaming/: marketdata.hpp  serialize.hpp  tradeupdate.hpp
include/alpaca/models/trading/: account.hpp  calendar.hpp  clock.hpp  order.hpp  portfolio.hpp  position.hpp  serialize.hpp
include/alpaca/utils/: macd.hpp  utils.hpp
tests/: CMakeLists.txt
tests/unit/: testAccountSerialize.cpp  testBarsSerialize.cpp  testMarketClient.cpp  testMarketDataStream.cpp  testOrderReqSerialize.cpp  testOrderRespSerialize.cpp  testPositionSerialize.cpp  testTradeUpdateStream.cpp  testTradingClient.cpp
