function(alpaca_add_example name)
  add_executable(${name} ${ARGN})
  target_link_libraries(${name} PRIVATE alpaca_sdk)
  target_compile_features(${name} PRIVATE cxx_std_23)
endfunction()

alpaca_add_example(get_account get_account.cpp)
alpaca_add_example(list_orders list_orders.cpp)
alpaca_add_example(list_positions list_positions.cpp)
alpaca_add_example(market_clock market_clock.cpp)
alpaca_add_example(place_order place_order.cpp)
alpaca_add_example(portfolio_history portfolio_history.cpp)
